After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 754858 - ges-launch: leakage of GError
ges-launch: leakage of GError
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-editing-services
git master
Other All
: Normal normal
: 1.5.91
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-09-11 01:02 UTC by Justin Kim
Modified: 2015-09-11 09:35 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
g_error_free (1.29 KB, patch)
2015-09-11 01:03 UTC, Justin Kim
committed Details | Review

Description Justin Kim 2015-09-11 01:02:42 UTC
Some of statements for handling error don't free GError pointers.
Comment 1 Justin Kim 2015-09-11 01:03:17 UTC
Created attachment 311106 [details] [review]
g_error_free
Comment 2 Thibault Saunier 2015-09-11 09:29:46 UTC
commit 04bac06fad499fa89aa5fc99a6f68dc19d64ebcb
Author: Justin Kim <justin.kim@collabora.com>
Date:   Fri Sep 11 09:58:56 2015 +0900

    ges-launcher: don't leak GError
    
    https://bugzilla.gnome.org/show_bug.cgi?id=754858