ges-launcher: don't leak GError

https://bugzilla.gnome.org/show_bug.cgi?id=754858